"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

common/p_cmd.c: remove 'resist' command, duplicates server-side 'resistances' giving more info.
Nicolas Weeger 2007-06-18

configure.in: Add another eval $ndatadir line so properly resolve all
the shell variable names so that CF_DATADIR is set properly in common/config.h
--
MSW 2007-06-11

gtk-v2/src/inventory.c: Add tooltips to the inventory tabs, to make it
clearer what the different tabs do.
--
MSW 2007-06-11

Add pick up menu updating support for gtk2 client - when you log in, it
will get your character pickup mode and update the check boxes accordingly.
---
gtk-v2/gtk-v2.glade: Change "don't_pickup1" widget name to "do_not_pickup"
gtk-v2/src/interface.c: Rebuilt
gtk-v2/src/main.c: Remove empty client_pickup() function, add pickup_init()
gtk-v2/src/pickup.c: Bunch of new code to support pickup updating - mostly
  a mapping from menu items to pickup modes, since glade doesn't let us
  store those attributes in the menu item.
MSW 2007-06-11

Remove obsolete mapredraw command (empty on server-side).
 common/p_cmd.c
 gnome/map.c
 gtk/config.c map.c
 gtk-v2/src/config.c map.c
 x11/xutil.c
Nicolas Weeger 2007-06-02

Apply patch #1720388: data len in client.c is calculated wrong
 courtesy Jürgen Kahnert.
common/client.c
Nicolas Weeger 2007-05-16

gtk/text.c: fix callback that was eating a word.
Nicolas Weeger 2007-05-03

Change the version string from 1.9.1 to 2.0-dev for trunk.
Alex Schultz 2007-04-28

Implement feature request #1560389: improve inscription logic.
 gtk/gx11.c inventory.c
 common/client.c client.h commands.c item.c item.h proto.h
Nicolas Weeger 2007-04-23

Fix memory overrun errors.
---
gtk/gx11.c: Allocate enough space in pickup_menus/value to store all
   allocated entries.
gtk-v2/src/stats.c: Allocate enough skill boxes to store MAX_SKILL skills.
gtk-v2/src/info.c: Allocate enough memory in info_pane[] to not cause memory
   overruns.